--- a/dz2_1.md
+++ b/dz2_1.md
@@ -8,11 +8,11 @@
 Бумага заворачивает камень.
 Ножницы режут бумагу.
 ```
-1) Попросить пользователя сделать ход (ввести слово "камень", "ножницы" или "бумага") и записать результат в переменную
+1) Попросить пользователя сделать ход (ввести слово "камень", "ножницы" или "бумага") и записать результат в переменную (например ```user_action```)
 2) Сгенерировать ответный ход компьютера с помощью такого кода (в начале файла не забыть написать ```import random```)
 ```
 possible_actions = ["камень", "ножницы", "бумага"]
 computer_action = random.choice(possible_actions)
 ```
-3) С помощью if - elif - else определить победителя
+3) С помощью if - elif - else определить победителя, сравнивая user_action и computer_action
 4) Сделать так, чтобы после каждого раунда у пользователя спрашивали, хочет он сыграть еще раз или нет
